--- a/index.html
+++ b/index.html
@@ -1,8 +1,59 @@
-<p>Hello 大家好</p>
-<p>我是霸都丶傲天，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>我的导航网站</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .link-group {
+            margin-bottom: 20px;
+        }
+        .link-group h2 {
+            color: #555;
+        }
+        .link-group a {
+            display: block;
+            margin: 5px 0;
+            color: #007BFF;
+            text-decoration: none;
+        }
+        .link-group a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <h1>我的个人导航网站</h1>
 
-<ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
-</ul>
+    <div class="link-group">
+        <h2>学习资源</h2>
+        <a href="https://www.coursera.org">Coursera</a>
+        <a href="https://www.udemy.com">Udemy</a>
+        <a href="https://www.khanacademy.org">Khan Academy</a>
+    </div>
+
+    <div class="link-group">
+        <h2>开发工具</h2>
+        <a href="https://code.visualstudio.com">VS Code</a>
+        <a href="https://git-scm.com">Git</a>
+        <a href="https://www.postman.com">Postman</a>
+    </div>
+
+    <div class="link-group">
+        <h2>社交媒体</h2>
+        <a href="https://twitter.com">Twitter</a>
+        <a href="https://www.linkedin.com">LinkedIn</a>
+        <a href="https://www.reddit.com">Reddit</a>
+    </div>
+</body>
+</html>
