modified:   index.html

--- a/index.html
+++ b/index.html
@@ -10,50 +10,105 @@
             background-color: #f9f9f9;
             margin: 0;
             padding: 20px;
+            animation: fadeIn 1s ease-in-out;
         }
+
         h1 {
             text-align: center;
             color: #333;
         }
+
         .link-group {
             margin-bottom: 20px;
+            padding: 15px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
+
         .link-group h2 {
             color: #555;
+            margin-bottom: 15px;
         }
+
         .link-group a {
-            display: block;
-            margin: 5px 0;
-            color: #007BFF;
+            display: inline-block;
+            margin: 10px;
             text-decoration: none;
+            color: #333;
+            text-align: center;
         }
-        .link-group a:hover {
-            text-decoration: underline;
+
+        .link-group a img {
+            width: 60px;
+            height: 60px;
+            margin: 0 auto 5px;
+            border-radius: 50%;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .link-group a:hover img {
+            transform: scale(1.1);
+        }
+
+        .link-group a span {
+            display: block;
+            margin-top: 5px;
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
-    <h1>我的个人导航网站</h1>
+    <h1>导航</h1>
 
     <div class="link-group">
-        <h2>学习资源</h2>
-        <a href="https://www.coursera.org">Coursera</a>
-        <a href="https://www.udemy.com">Udemy</a>
-        <a href="https://www.khanacademy.org">Khan Academy</a>
+        <h2>常用网站</h2>
+        <a href="https://www.bing.com">
+            <img src="https://www.bing.com/favicon.ico" alt="Bing">
+            <span>必应</span>
+        </a>
+        <a href="https://www.google.com">
+            <img src="https://www.google.com/favicon.ico" alt="Google">
+            <span>Google</span>
+        </a>
+        <a href="https://chat.qwen.ai/">
+            <img src="https://chat.qwen.ai/favicon.ico" alt="Qwen">
+            <span>Qwen</span>
+        </a>
     </div>
 
     <div class="link-group">
         <h2>开发工具</h2>
-        <a href="https://code.visualstudio.com">VS Code</a>
-        <a href="https://git-scm.com">Git</a>
-        <a href="https://www.postman.com">Postman</a>
+        <a href="https://code.visualstudio.com">
+            <img src="https://code.visualstudio.com/favicon.ico" alt="VS Code">
+            <span>VS Code</span>
+        </a>
+        <a href="https://git-scm.com">
+            <img src="https://git-scm.com/favicon.ico" alt="Git">
+            <span>Git</span>
+        </a>
+        <a href="https://mail.qq.com/">
+            <img src="https://mail.qq.com/favicon.ico" alt="QQ邮箱">
+            <span>QQ邮箱</span>
+        </a>
     </div>
 
     <div class="link-group">
         <h2>社交媒体</h2>
-        <a href="https://twitter.com">Twitter</a>
-        <a href="https://www.linkedin.com">LinkedIn</a>
-        <a href="https://www.reddit.com">Reddit</a>
+        <a href="https://twitter.com">
+            <img src="https://twitter.com/favicon.ico" alt="Twitter">
+            <span>Twitter</span>
+        </a>
+        <a href="https://www.linkedin.com">
+            <img src="https://www.linkedin.com/favicon.ico" alt="LinkedIn">
+            <span>LinkedIn</span>
+        </a>
+        <a href="https://www.reddit.com">
+            <img src="https://www.reddit.com/favicon.ico" alt="Reddit">
+            <span>Reddit</span>
+        </a>
     </div>
 </body>
 </html>
