modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的导航网站</title>
+    <title>G.E.M.邓紫棋</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-    <h1>导航</h1>
+    <h1>不知名个站</h1>
 
     <div class="link-group">
         <h2>常用网站</h2>
