--- a/index.html
+++ b/index.html
@@ -1,114 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>G.E.M.邓紫棋</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 20px;
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-
-        .link-group {
-            margin-bottom: 20px;
-            padding: 15px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-
-        .link-group h2 {
-            color: #555;
-            margin-bottom: 15px;
-        }
-
-        .link-group a {
-            display: inline-block;
-            margin: 10px;
-            text-decoration: none;
-            color: #333;
-            text-align: center;
-        }
-
-        .link-group a img {
-            width: 60px;
-            height: 60px;
-            margin: 0 auto 5px;
-            border-radius: 50%;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .link-group a:hover img {
-            transform: scale(1.1);
-        }
-
-        .link-group a span {
-            display: block;
-            margin-top: 5px;
-            font-size: 14px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>程序员的烦恼</title>
 </head>
 <body>
-    <h1>不知名个站</h1>
-
-    <div class="link-group">
-        <h2>常用网站</h2>
-        <a href="https://www.bing.com">
-            <img src="https://www.bing.com/favicon.ico" alt="Bing">
-            <span>必应</span>
-        </a>
-        <a href="https://www.google.com">
-            <img src="https://www.google.com/favicon.ico" alt="Google">
-            <span>Google</span>
-        </a>
-        <a href="https://chat.qwen.ai/">
-            <img src="https://chat.qwen.ai/favicon.ico" alt="Qwen">
-            <span>Qwen</span>
-        </a>
-    </div>
-
-    <div class="link-group">
-        <h2>开发工具</h2>
-        <a href="https://code.visualstudio.com">
-            <img src="https://code.visualstudio.com/favicon.ico" alt="VS Code">
-            <span>VS Code</span>
-        </a>
-        <a href="https://git-scm.com">
-            <img src="https://git-scm.com/favicon.ico" alt="Git">
-            <span>Git</span>
-        </a>
-        <a href="https://mail.qq.com/">
-            <img src="https://mail.qq.com/favicon.ico" alt="QQ邮箱">
-            <span>QQ邮箱</span>
-        </a>
-    </div>
-
-    <div class="link-group">
-        <h2>社交媒体</h2>
-        <a href="https://twitter.com">
-            <img src="https://twitter.com/favicon.ico" alt="Twitter">
-            <span>Twitter</span>
-        </a>
-        <a href="https://www.linkedin.com">
-            <img src="https://www.linkedin.com/favicon.ico" alt="LinkedIn">
-            <span>LinkedIn</span>
-        </a>
-        <a href="https://www.reddit.com">
-            <img src="https://www.reddit.com/favicon.ico" alt="Reddit">
-            <span>Reddit</span>
-        </a>
-    </div>
+  <h1>程序员的烦恼</h1>
+  <p>我跟女朋友说：“亲爱的，bug修好了我就回来。”<br>她回了个“嗯”，然后我就失去了编译的信心。</p>
 </body>
 </html>
